...
            android:minHeight="57dp"
            android:theme="?attr/actionBarTheme"
            app:title="PalmPhone"
            app:titleTextColor="@android:color/black"/>

    <LinearLayout
            android:id="@+id/formMenu"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">
...
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:onClick="pagePerfil"/>

        <Button
                android:id="@+id/buttonColeta"
                android:layout_width="348dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_weight="0.04"
                android:background="@color/colorPrimary"
                android:text="Iniciar coleta"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:onClick="pageColetor"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/formSync"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_weight="0.04"
            android:orientation="vertical"
            android:weightSum="1">

        <Button
                android:id="@+id/buttonSync"
                android:layout_width="348dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:background="@color/Sync"
                android:text="Sincronizar"
                android:onClick="sincronizarFirebase"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/formLogout"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_weight="0.04"
            android:orientation="vertical"
            android:weightSum="1">

        <Button
                android:id="@+id/buttonSair"
                android:layout_width="348dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:background="@android:color/holo_red_dark"
                android:text="Sair"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:onClick="botaoLogout"/>
    </LinearLayout>

...
