...
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Coleta de Dados"
        app:titleTextColor="@android:color/background_dark" />

    <LinearLayout
        android:id="@+id/linearLayoutDigRA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbarColetaDados"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/textRA"
                android:layout_width="348dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:ems="10"
...
                android:inputType="number"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonRA"
            android:layout_width="348dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:text="SALVAR"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/buttonFinalizar"
            android:layout_width="348dp"
            android:layout_height="42dp"
            android:layout_alignEnd="@+id/buttonBarcode"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_weight="0.04"
            android:background="@color/Sync"
            android:text="FINALIZAR CHAMADA"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <Button
...
