...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarColetor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:elevation="0dp"
        android:minHeight="?attr/actionBarSize"
...
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/spinnerDisciplina"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.21"
            android:spinnerMode="dialog"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/spinnerAula"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.21"
            android:spinnerMode="dialog"
...
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/buttonColetar"
            android:layout_width="348dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:onClick="pageColeta"
            android:text="Coletar dados"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

...
