<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:elevation="0dp"
        android:layoutMode="clipBounds"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Login"
        app:titleTextColor="@android:color/black" />

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/textEmail"
                android:layout_width="348dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/ic_email"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:isScrollContainer="false"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/textSenha"
                android:layout_width="348dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/ic_password"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="Senha"
                android:inputType="textPassword"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="348dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:onClick="botaoLogin"
            android:text="ENTRAR"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonCadastro"
            android:layout_width="348dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:onClick="botaoCadastro"
            android:text="CADASTRAR NOVO USUÁRIO"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
